[REFACTOR] with zenjava.